front. hit rate

--- a/home-darts-web/src/app/components/around-the-clock/around-the-clock.component.html
+++ b/home-darts-web/src/app/components/around-the-clock/around-the-clock.component.html
@@ -1,13 +1,14 @@
-<p class="erorr-debug">errorDebug: {{ errorDebug | json }}; loading: {{ loading }}; nominal: {{ nominal }}</p>
+<p class="erorr-debug">errorDebug: {{ errorDebug | json }}; loading: {{ loading }}; hits: {{ hits }} / {{ throws }} ({{ hits / throws * 100 }}%)</p>
 <div class="nominal-panel">{{ nominal }}</div>
 <ul class="tools">
   <li>
-    <button class="btn" [disabled]="loading || nominal === 0" (click)="onHit()">Hit</button>
+    <button class="btn" [disabled]="buttonsDisabled" (click)="onHit()">Hit</button>
   </li>
   <li>
-    <button class="btn" [disabled]="loading || nominal === 0" (click)="onMiss()">Miss</button>
+    <button class="btn" [disabled]="buttonsDisabled" (click)="onMiss()">Miss</button>
   </li>
   <li>
-    <button class="btn" [disabled]="loading || nominal === 0" (click)="onUndo()">Undo</button>
+    <!-- TODO: disabled -->
+    <button class="btn" [disabled]="true" (click)="onUndo()">Undo</button>
   </li>
 </ul>
