--- a/home-darts-web/src/app/app.component.html
+++ b/home-darts-web/src/app/app.component.html
@@ -1,3 +1,1 @@
-<!-- TODO: routing -->
-<!-- TODO: rename app prefix -->
-<app-around-the-clock></app-around-the-clock>
+<router-outlet></router-outlet>
