front. statistics module; buttons styles

--- a/home-darts-web/src/app/components/menu/menu.component.html
+++ b/home-darts-web/src/app/components/menu/menu.component.html
@@ -1,6 +1,13 @@
-<div>
-  <a routerLink="./around-the-clock">Around the Clock</a>
-</div>
-<div>
-  <a routerLink="./history">History</a>
+<div class="container">
+  <ul>
+    <li class="manu__item">
+      <a class="menu__btn" routerLink="./around-the-clock">Around the Clock</a>
+    </li>
+    <li class="manu__item">
+      <a class="menu__btn" routerLink="./history">History</a>
+    </li>
+    <li class="manu__item">
+      <a class="menu__btn" routerLink="./statistics">Statistics</a>
+    </li>
+  </ul>
 </div>
