--- a/home-darts-web/src/styles.scss
+++ b/home-darts-web/src/styles.scss
@@ -16,3 +16,14 @@ ul {
 p {
   margin: 0;
 }
+
+.btn-large {
+  padding: 20px;
+  font-size: 20px;
+}
+
+.container {
+  display: block;
+  max-width: 360px;
+  margin: 0 auto;
+}
