front. arc next sections; title link

--- a/home-darts-web/src/app/app.component.html
+++ b/home-darts-web/src/app/app.component.html
@@ -1,2 +1,4 @@
-<h1 class="app__title">Home darts</h1>
+<h1 class="app__title">
+  <a routerLink="/">Home darts</a>
+</h1>
 <router-outlet></router-outlet>
