--- a/home-darts-web/src/app/screens/around-the-clock/components/atc-game/atc-game.component.html
+++ b/home-darts-web/src/app/screens/around-the-clock/components/atc-game/atc-game.component.html
@@ -1,21 +1,42 @@
-<p class="erorr-debug">errorDebug: {{ errorDebug | json }}; gameId: {{ gameId }}; hits: {{ hits }} / {{ throws }} ({{ (hits / throws * 100) | number: '1.3-3' }}%)</p>
-<div class="nominal-panel">
-  <p class="nominal-panel__current">{{ currentSection }}</p>
-  <p *ngIf="getSection(hits + 1) as nextSection" class="nominal-panel__next">{{ nextSection }}</p>
-  <p *ngIf="getSection(hits + 2) as nextSection" class="nominal-panel__next">{{ nextSection }}</p>
+<div class="atc-game__container">
+  <ul class="atc-game__participants">
+    <li>
+      <hd-atc-game-participant
+        [turnHits]="[false, false, true]"
+        username="Player 1"
+        [hits]="3"
+        [throws]="10"
+      ></hd-atc-game-participant>
+    </li>
+    <li>
+      <hd-atc-game-participant
+        [active]="true"
+        [turnHits]="[true]"
+        username="Player 2"
+        [hits]="0"
+        [throws]="8"
+      ></hd-atc-game-participant>
+    </li>
+    <li>
+      <hd-atc-game-participant
+        [turnHits]="[true, true, true]"
+        username="Player 3"
+        [hits]="18"
+        [throws]="1240"
+      ></hd-atc-game-participant>
+    </li>
+  </ul>
+  <div class="atc-game__output">Player 2 turns</div>
+  <div class="atc-game__sections">
+    <div class="atc-game__digit">12</div>
+    <div class="atc-game__digit">13</div>
+    <div class="atc-game__digit">14</div>
+  </div>
+  <div class="atc-game__tools-container">
+    <div class="atc-game__tools">
+      <button class="atc-game__tool-btn">Hit</button>
+      <button class="atc-game__tool-btn">Miss</button>
+      <button class="atc-game__tool-btn">Undo</button>
+    </div>
+  </div>
 </div>
-<ul class="tools">
-  <li>
-    <button class="btn tools__btn" [disabled]="buttonDisabled || !currentSection" (click)="onHit()">Hit</button>
-  </li>
-  <li>
-    <button class="btn tools__btn" [disabled]="buttonDisabled || !currentSection" (click)="onMiss()">Miss</button>
-  </li>
-  <li>
-    <button class="btn tools__btn" [disabled]="buttonDisabled" (click)="onUndo()">Undo</button>
-  </li>
-</ul>
-<div class="complete-tools">
-  <button class="btn game-btn" [disabled]="buttonDisabled" (click)="onCompleteBtnClick()">Complete</button>
-</div>
-<p *ngIf="isCompleted">Game is completed</p>
