--- a/home-darts-web/src/app/screens/around-the-clock/components/atc-game/atc-game.component.scss
+++ b/home-darts-web/src/app/screens/around-the-clock/components/atc-game/atc-game.component.scss
@@ -47,5 +47,8 @@
   width: 80px;
   padding: 24px 0;
   text-transform: uppercase;
+}
+
+.atc-game__tool-btn:not(:disabled) {
   cursor: pointer;
 }
