--- a/home-darts-web/src/app/screens/around-the-clock/components/atc-start/atc-start.component.html
+++ b/home-darts-web/src/app/screens/around-the-clock/components/atc-start/atc-start.component.html
@@ -1,1 +1,24 @@
-<button class="btn game-btn" [disabled]="loading" (click)="onStartBtnClick()">Start</button>
+<form [formGroup]="form" (ngSubmit)="onStartBtnClick()">
+  <div class="atc-start__param">
+    <select formControlName="direction">
+      <option *ngFor="let item of gameDirectionItems" [value]="item.value">{{ item.label }}</option>
+    </select>
+  </div>
+  <div class="atc-start__param">
+    <label>
+      <input type="checkbox" formControlName="fastGame">
+      <span>Fast game</span>
+    </label>
+  </div>
+  <div class="atc-start__param">
+    <p>Hit detection</p>
+    <hd-split-button formControlName="hitDetection" [items]="sectionTypes"></hd-split-button>
+  </div>
+  <div class="atc-start__param">
+    <label>
+      <input type="checkbox" formControlName="includeBull">
+      <span>Include bull</span>
+    </label>
+  </div>
+  <input class="btn game-btn" [disabled]="loading" type="submit" value="Start">
+</form>
