--- a/home-darts-web/src/app/screens/around-the-clock/components/atc-start/atc-start.component.scss
+++ b/home-darts-web/src/app/screens/around-the-clock/components/atc-start/atc-start.component.scss
@@ -1,3 +1,7 @@
+.atc-start__param {
+  margin-bottom: 10px;
+}
+
 .game-btn {
   width: 160px;
 }
@@ -10,4 +14,10 @@
 
 .btn:not(:disabled) {
   cursor: pointer;
+}
+
+::ng-deep .atc-start__param {
+  select, button, label {
+    font-size: 1.5em;
+  }
 }
