--- a/home-darts-web/src/app/screens/around-the-clock/components/atc-start/atc-start.component.html
+++ b/home-darts-web/src/app/screens/around-the-clock/components/atc-start/atc-start.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" (ngSubmit)="onStartBtnClick()">
+<form [formGroup]="form" (ngSubmit)="submit()">
   <div class="atc-start__param">
     <select formControlName="direction">
       <option *ngFor="let item of gameDirectionItems" [value]="item.value">{{ item.label }}</option>
