--- a/home-darts-web/src/app/screens/around-the-clock/components/atc-game/atc-game.component.html
+++ b/home-darts-web/src/app/screens/around-the-clock/components/atc-game/atc-game.component.html
@@ -1,4 +1,4 @@
-<div class="atc-game__container">
+<div class="container">
   <ul class="atc-game__participants">
     <li *ngFor="let player of players$ | async">
       <hd-atc-game-participant
@@ -15,7 +15,7 @@
     <div *ngFor="let sector of upcomingSectors$ | async" class="atc-game__digit">{{ sector }}</div>
   </div>
   <div class="atc-game__tools-container">
-    <div class="atc-game__tools">
+    <div class="atc-game__tools container">
       <button class="atc-game__tool-btn" [disabled]="loading" (click)="throw(true)">Hit</button>
       <button class="atc-game__tool-btn" [disabled]="loading" (click)="throw(false)">Miss</button>
       <button class="atc-game__tool-btn" [disabled]="loading" (click)="undo()">Undo</button>
