--- a/home-darts-web/src/app/screens/around-the-clock/components/atc-game/atc-game.component.scss
+++ b/home-darts-web/src/app/screens/around-the-clock/components/atc-game/atc-game.component.scss
@@ -47,3 +47,9 @@
 .atc-game__tool-btn:not(:disabled) {
   cursor: pointer;
 }
+
+.atc-game__tool-btn-complete {
+  position: absolute;
+  bottom: 100%;
+  width: 50%;
+}
