--- a/home-darts-web/src/app/screens/around-the-clock/components/atc-start-players-list/atc-start-players-list.component.html
+++ b/home-darts-web/src/app/screens/around-the-clock/components/atc-start-players-list/atc-start-players-list.component.html
@@ -9,7 +9,7 @@
 </ul>
 <select>
   <option
-    *ngFor="let player of players | filteredPlayers: 'remove': value"
+    *ngFor="let player of players | filteredPlayers: 'exclude': value"
     [ngValue]="player"
     (click)="onItemChange(player)">{{ player.username }}</option>
 </select>
