--- a/home-darts-web/src/app/screens/statistics/statistics.component.html
+++ b/home-darts-web/src/app/screens/statistics/statistics.component.html
@@ -7,11 +7,17 @@
   </div>
 
   <div *ngIf="stats$ | async as stats">
-    <p>Games count - {{ stats.gamesCount }}</p>
-    <p>Throws count - {{ stats.throwsCount }}</p>
-    <p>Total playing time - {{ stats.totalPlayingTimeSeconds | formatTimeInterval }}</p>
+    <div class="statistics__section">
+      <p>Games count - {{ stats.gamesCount }}</p>
+      <p>Throws count - {{ stats.throwsCount }}</p>
+      <p>Total playing time - {{ stats.totalPlayingTimeSeconds | formatTimeInterval }}</p>
+    </div>
 
-    <h3>Around the clock</h3>
-    <p>Hit rate - {{ (stats.aroundTheClock.hits / stats.aroundTheClock.throws * 100) | number: '1.2-2' }}%</p>
+    <div class="statistics__section">
+      <h3>Around the clock</h3>
+      <p>Throws count - {{ stats.aroundTheClock.throws }}</p>
+      <p>Hit rate - {{ (stats.aroundTheClock.hits / stats.aroundTheClock.throws * 100) | number: '1.2-2' }}%</p>
+      <p>Longest hits streak - {{ stats.aroundTheClock.longestHitsStreak }}</p>
+    </div>
   </div>
 </div>
