front. remove deprecated stats

--- a/home-darts-web/src/app/screens/statistics/components/atc-statistics/atc-statistics.component.html
+++ b/home-darts-web/src/app/screens/statistics/components/atc-statistics/atc-statistics.component.html
@@ -17,7 +17,9 @@
     </tr>
     <tr>
       <td>Hit rate</td>
-      <td *ngFor="let item of stats.throwsHits | atcStatsItems">{{ item.hits ?? 0 }}</td>
+      <td *ngFor="let item of stats.throwsHits | atcStatsItems">
+        <ng-container *ngIf="(item.throws ?? 0) > 0; else noThrows">{{ ((item.hits ?? 0) / (item.throws ?? 0) * 100) | number: '1.2-2' }}%</ng-container>
+      </td>
     </tr>
     <tr>
       <td>Longest hits streak</td>
@@ -25,3 +27,5 @@
     </tr>
   </tbody>
 </table>
+
+<ng-template #noThrows>-</ng-template>
