front. material; toolbar

--- a/home-darts-web/src/styles.scss
+++ b/home-darts-web/src/styles.scss
@@ -1,34 +1,1 @@
-html {
-  font-family: sans-serif;
-  color: #333;
-}
-
-body {
-  margin: 0;
-  padding: 10px;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  margin: 0;
-}
-
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-p {
-  margin: 0;
-}
-
-.btn-large {
-  padding: 20px;
-  font-size: 20px;
-}
-
-.container {
-  display: block;
-  max-width: 720px;
-  margin: 0 auto;
-}
+@import './styles/main';
