--- a/home-darts-web/src/app/app.component.html
+++ b/home-darts-web/src/app/app.component.html
@@ -1,4 +1,7 @@
-<h1 class="app__title">
-  <a routerLink="/">Home darts</a>
-</h1>
+<mat-toolbar color="primary">
+  <a mat-icon-button routerLink="/" class="example-icon">
+    <mat-icon>home</mat-icon>
+  </a>
+  <h1>Home darts</h1>
+</mat-toolbar>
 <router-outlet></router-outlet>
