front. main menu mat

--- a/home-darts-web/src/app/app.component.html
+++ b/home-darts-web/src/app/app.component.html
@@ -1,5 +1,5 @@
-<mat-toolbar color="primary">
-  <a mat-icon-button routerLink="/" class="example-icon">
+<mat-toolbar class="header" color="primary">
+  <a mat-icon-button routerLink="/">
     <mat-icon>home</mat-icon>
   </a>
   <h1>Home darts</h1>
