--- a/home-darts-web/src/app/components/menu/menu.component.scss
+++ b/home-darts-web/src/app/components/menu/menu.component.scss
@@ -1,12 +1,8 @@
-.manu__item {
-  margin-bottom: 10px;
+.item {
+  padding: 8px;
 }
 
-.menu__btn {
-  display: block;
-  padding: 20px;
-  background: #ddd;
-  border-radius: 3px;
-  text-decoration: none;
-  color: inherit;
+.btn {
+  width: 100%;
+  height: 46px;
 }
