--- a/home-darts-web/src/app/screens/around-the-clock/components/atc-start/atc-start.component.scss
+++ b/home-darts-web/src/app/screens/around-the-clock/components/atc-start/atc-start.component.scss
@@ -1,23 +1,3 @@
-.atc-start__param {
-  margin-bottom: 10px;
-}
-
-.game-btn {
-  width: 160px;
-}
-
-.btn {
-  font-size: 24px;
-  padding: 24px 0;
-  text-transform: uppercase;
-}
-
-.btn:not(:disabled) {
-  cursor: pointer;
-}
-
-::ng-deep .atc-start__param {
-  select, button, label {
-    font-size: 1.5em;
-  }
+.container {
+  padding: 0 8px 8px 8px;
 }
