--- a/home-darts-web/src/app/app.component.html
+++ b/home-darts-web/src/app/app.component.html
@@ -1,10 +1,22 @@
 <mat-toolbar class="header" color="primary">
-  <a mat-icon-button routerLink="/">
-    <mat-icon>home</mat-icon>
-  </a>
-  <h1>Home darts</h1>
+  <div class="menu-button-container">
+    <button mat-icon-button (click)="toggleMobileMenu()">
+      <mat-icon>menu</mat-icon>
+    </button>
+  </div>
+  <h1>
+    <a routerLink="/">Home darts</a>
+  </h1>
 </mat-toolbar>
-<router-outlet></router-outlet>
+
+<mat-drawer-container class="sidenav-container" (backdropClick)="closeSidenav()">
+  <mat-drawer mode="over">
+    <hd-menu></hd-menu>
+  </mat-drawer>
+  <mat-drawer-content class="sidenav-content">
+    <router-outlet></router-outlet>
+  </mat-drawer-content>
+</mat-drawer-container>
 
 <mat-progress-bar
   *ngIf="progressBarShown$ | async"
