--- a/home-darts-web/src/styles/_main.scss
+++ b/home-darts-web/src/styles/_main.scss
@@ -1,19 +1,26 @@
+@import './colors';
+
 html, body {
   height: 100%;
 }
 
 html {
   font-family: sans-serif;
-  color: #333;
+  color: $text-color;
 }
 
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
+
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
 }
 
 ul {
@@ -35,4 +42,10 @@ p {
   display: block;
   max-width: 720px;
   margin: 0 auto;
+}
+
+.block {
+  background: $block-color;
+  border-radius: 4px;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, .12);
 }
