--- a/home-darts-web/src/styles/_main.scss
+++ b/home-darts-web/src/styles/_main.scss
@@ -12,6 +12,7 @@ html {
 body {
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
+  background-color: $background-color;
 }
 
 h1, h2, h3, h4, h5, h6 {
