--- a/home-darts-web/src/app/app.component.html
+++ b/home-darts-web/src/app/app.component.html
@@ -9,14 +9,9 @@
   </h1>
 </mat-toolbar>
 
-<mat-drawer-container class="sidenav-container" (backdropClick)="closeSidenav()">
-  <mat-drawer mode="over">
-    <hd-menu></hd-menu>
-  </mat-drawer>
-  <mat-drawer-content class="sidenav-content">
-    <router-outlet></router-outlet>
-  </mat-drawer-content>
-</mat-drawer-container>
+<hd-sidenav-container>
+  <router-outlet></router-outlet>
+</hd-sidenav-container>
 
 <mat-progress-bar
   *ngIf="progressBarShown$ | async"
