--- a/home-darts-web/src/app/app.component.html
+++ b/home-darts-web/src/app/app.component.html
@@ -1,16 +1,23 @@
 <mat-toolbar class="header" color="primary">
   <div class="menu-button-container">
-    <button mat-icon-button (click)="toggleMobileMenu()">
+    <button
+      *ngIf="isNotRoot$ | async"
+      mat-icon-button
+      class="menu-button"
+      (click)="toggleMobileMenu()"
+    >
       <mat-icon>menu</mat-icon>
     </button>
   </div>
   <h1>
-    <a routerLink="/">Home darts</a>
+    <a routerLink="/" (click)="closeSidenav()">Home darts</a>
   </h1>
 </mat-toolbar>
 
 <hd-sidenav-container>
-  <router-outlet></router-outlet>
+  <div class="sidenav-container">
+    <router-outlet></router-outlet>
+  </div>
 </hd-sidenav-container>
 
 <mat-progress-bar
