--- a/home-darts-web/src/app/components/sidenav-container/sidenav-container.component.html
+++ b/home-darts-web/src/app/components/sidenav-container/sidenav-container.component.html
@@ -1,8 +1,11 @@
-<mat-drawer-container class="sidenav-container" (backdropClick)="closeSidenav()">
+<mat-drawer-container class="drawer-container" (backdropClick)="closeSidenav()">
   <mat-drawer mode="over">
     <hd-sidenav-menu (menuItemClick)="closeSidenav()"></hd-sidenav-menu>
   </mat-drawer>
-  <mat-drawer-content class="sidenav-content">
-    <ng-content></ng-content>
+  <mat-drawer-content>
+    <div class="drawer-content">
+      <hd-sidenav-menu class="block sidenav-menu"></hd-sidenav-menu>
+      <ng-content></ng-content>
+    </div>
   </mat-drawer-content>
 </mat-drawer-container>
