--- a/home-darts-web/src/app/app.component.scss
+++ b/home-darts-web/src/app/app.component.scss
@@ -18,8 +18,8 @@
   }
 }
 
-.sidenav-container {
-  padding-top: $header-spacing;
+.toolbar-spacer {
+  flex: 1 1 auto;
 }
 
 .global-progress-bar {
