--- a/home-darts-web/src/app/screens/around-the-clock/components/atc-start/atc-start.component.html
+++ b/home-darts-web/src/app/screens/around-the-clock/components/atc-start/atc-start.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="screen-container">
   <form [formGroup]="form" (ngSubmit)="submit()">
     <div *ngIf="players$ | async as players" class="atc-start__param">
       <h3>Players</h3>
