--- a/home-darts-web/src/app/screens/statistics/statistics.component.html
+++ b/home-darts-web/src/app/screens/statistics/statistics.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="screen-container">
   <p>Player</p>
   <div class="statistics__dropdown-container">
     <select [formControl]="playerControl" class="statistics__dropdown">
