--- a/home-darts-web/src/styles/_main.scss
+++ b/home-darts-web/src/styles/_main.scss
@@ -39,10 +39,8 @@ p {
   font-size: 20px;
 }
 
-.container {
-  display: block;
-  max-width: 720px;
-  margin: 0 auto;
+.screen-container {
+  padding: 24px 16px;
 }
 
 .block {
