--- a/home-darts-web/src/app/screens/history/history.component.html
+++ b/home-darts-web/src/app/screens/history/history.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="screen-container">
   <h2 class="history__title">History</h2>
   <ul>
     <li *ngFor="let game of games" class="history__item">
